# Gemi

./: .env.example  .gitignore  GEMMA_TERMS_OF_USE.txt  Install-Gemi.command  LICENSE  README.md  ai_features_removal_summary.md  cleanup_summary.md  codebase_cleanup_plan.md  compose_functionality_audit.md  create-dmg-beautiful.sh  create-dmg-simple.sh  create-dmg.sh  create_dmg.sh  create_dmg_background.sh  create_dmg_simple.sh  create_gemi_dmg.sh  default.profraw  diagnose_server.sh  emoji_cursor_fix_summary.md  feature_test_plan.md  fix_server_signing.sh  memories_feature_summary.md  production_improvements_summary.md  server_output.txt  star_button_fix_summary.md  star_button_test.md  test_ollama.sh  test_pyinstaller.py  test_server_detailed.py  test_server_launch.sh  ui_fixes_summary.md
Gemi/: .gitignore  AI_AGENT_GUIDE.md  ARCHITECTURE.md  INTEGRATION_SUMMARY.md  bundle_server.sh  copy-env-build-phase.sh  test_integration.sh  test_ollama.sh
legal/: README.md
python-inference-server/: build_app.sh  build_full.sh  build_minimal.sh  com.gemi.ai-server.plist  create_bundle.sh  create_bundle_uv.sh  create_pyinstaller_bundle.sh  entitlements.plist  gemi-server.spec  gemi_server_wrapper.py  hf_token.txt.example  inference_server.py  inference_server_lazy.py  launch_server.sh  minimal_test_server.py  pyproject.toml  requirements.txt  runtime_hook_python.py  setup_for_distribution.sh  simple_server.py  simple_test_server.py  test_bundle.sh  test_health.py  test_multimodal.py
python-inference-server/hooks/: hook-encodings.py  hook-unittest.py
scripts/: build-dmg.sh  (+17 more)
(+316 files in other folders)
