[project]
name = "gemi-inference-server"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "transformers>=4.53.0",
    "accelerate",
    "fastapi",
    "uvicorn",
    "pillow",
    "soundfile",
    "librosa",
    "python-multipart",
    "sse-starlette",
]

[tool.uv]
dev-dependencies = []